--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -156,8 +156,10 @@
     .cta-button {
         padding: 10px 20px;
         font-size: 0.8rem;
+        margin: 0px;
     }
 }
+
 
                                               /* second section */
 
