--- a/src/components/Cart/cart2.css
+++ b/src/components/Cart/cart2.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 50vh;
+  min-height: 38vh;
   text-align: center;
 }
 
@@ -43,6 +43,7 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-bottom: 20px;
 }
 
 .return-button:hover {
