--- a/src/components/About/about2nd.css
+++ b/src/components/About/about2nd.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .about-section {
   position: relative;
   background-image: url('./green.jpg');
