--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,8 +1,8 @@
-* {
-    padding: 0;
+*, body{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-}
+ }
 
 body {
     font-family: "Arial", sans-serif;
