--- a/src/components/Shop/shop.css
+++ b/src/components/Shop/shop.css
@@ -1,3 +1,8 @@
+*, body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+ }
 .shop-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
