--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,8 +1,8 @@
-*, body{
+*, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
- }
+}
 
 body {
     font-family: "Arial", sans-serif;
@@ -40,7 +40,6 @@ ul {
     list-style: none;
     display: flex;
     gap: 25px;
-    transition: max-height 0.3s ease-out;
     margin: 0 auto;
 }
 
@@ -53,7 +52,8 @@ a {
     text-decoration: none;
     color: #000000;
 }
-a:hover{
+
+a:hover {
     color: #69af07;
 }
 
@@ -73,7 +73,28 @@ a:hover{
     color: #ffffff;
 }
 
-@media (max-width: 750px) {
+.cart-icon {
+    display: none;
+    position: relative;
+}
+
+.cart-icon .cart-entity {
+    font-size: 24px;
+}
+
+.cart-notification {
+    background-color: rgb(33, 108, 236);
+    color: white;
+    border-radius: 50%;
+    padding: 4px 7px;
+    font-size: 11px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    display: none;
+}
+
+@media (max-width: 786px) {
     .menu-icon {
         display: block;
     }
@@ -106,6 +127,15 @@ a:hover{
         margin-top: -5px;
         width: auto;
     }
+
+    /* Show the cart icon in mobile view */
+    .cart-icon {
+        display: inline-block;
+    }
+
+    .cart-icon .cart-notification {
+        display: inline-block;
+    }
 }
 
 .cart-count {
@@ -117,4 +147,4 @@ a:hover{
     position: relative;
     top: -15px;
     left: -10px;
-  }
+}
